Feature: Added projects section and styles

--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
             </div>
         </section>
 
+        <section  class="projects-section">
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+            <div class="project">
+                <img src="content\project3.png" />
+            </div>
+        </section>
+
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Contact</h2>
