Update: index.html
Updated hrefs in contact sections.

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <h2>Contact</h2>
                 <p>Interested in working together? Feel free to reach out.</p>
                 <ul class="contact-list">
-                    <li>Email: <a href="mailto:your@email.com">your@email.com</a></li>
-                    <li>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></li>
-                    <li>GitHub: <a href="#">github.com/yourusername</a></li>
+                    <li>Email: <a href="mailto:linkedin.com/in/efremtorrisi">Efrem.Torrisi@outlook.com</a></li>
+                    <li>LinkedIn: <a href="https://www.linkedin.com/in/efremtorrisi/">linkedin.com/in/efremtorrisi/</a></li>
+                    <li>GitHub: <a href="https://github.com/Efrem-Torrisi">github.com/Efrem-Torrisi</a></li>
                 </ul>
             </div>
         </section>
